# col_matching

./: .env.example  .gitignore  KG_FIXES_TODO.md  LICENSE  LICENSE-DATA  README.md  apply_person_verification.py  audit_governors.py  audit_grounding.py  blog_post.md  build_bridges.py  build_canada_career_map.py  build_canada_career_video.py  build_combined_mobility_global.py  build_dedup_review.py  build_education_atlas.py  build_iol_mobility_global.py  build_iol_mobility_video.py  build_mobility_video.py  build_place_map.py  build_place_rollup.py  build_static_atlas.py  build_tier2.py  classify_unmatched.py  compute_transfers.py  compute_transfers_iol.py  decompose_gaps.py  dedup_review.py  deepseek_dedup_run.py  detect_overmerge.py  diagnose_broadrick.py  diagnose_parse_loss.py  fetch_iol_coords.py  fetch_wd_dob.py  gen_calib_pilot_verdicts.py  gen_prod_slice3_verdicts.py  gen_prod_slice_verdicts.py  improve_place_coords.py  kg_backfill_colony.py  kg_bench_openrouter.py  (+79 more)
archive/: README.md  check_brooke_wiring.py  deepseek_dedup_ab.py  diagnose_unmatched.py  gen_prod_slice2_verdicts.py  gen_prod_slice4_verdicts.py  measure_bracket.py  measure_dedup_signal.py  measure_dedup_tail.py  measure_fuzzy_widen.py  measure_ocr_quality.py  measure_posfuzz.py  measure_prose_colony.py  measure_truncation.py  size_co_london.py  triage_unmatched.py
col_match/: __init__.py  config.py  graph.py
docs/: ADJUDICATION_GUIDE.md  AUDIT_GOVERNORS.md  CAREER_FACTS.md  DEDUP_LLM_METHOD.md  GROUNDING_NEXT_100.md  GROUND_HONOURS.md  GROUND_INSTITUTIONS.md  GROUND_IOL_ORGS.md  KG_LLM_LOOP.md  (+27 more)
(+6788 files in other folders)
