[project]
name = "col_matching"
version = "0.0.1"
description = "Read-only person-matching / career-chain resolution experiments over the COL_Official seam"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Pulled in only when the Fable adjudication harness lands; not used by the
# read-only seam.
llm = ["anthropic>=0.92"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["col_match*"]
